*SVN*

* Fixed CgiRequest#out to fall back to #write if $stdout doesn't have #syswrite [bitsweat]

* Fixed all helpers so that they use XHTML compliant double quotes for values instead of single quotes [htonl/bitsweat]

* Added link_to_image(src, options = {}, html_options = {}, *parameters_for_method_reference). Documentation:

    Creates a link tag to the image residing at the +src+ using an URL created by the set of +options+. See the valid options in
    link:classes/ActionController/Base.html#M000021. It's also possible to pass a string instead of an options hash to
    get a link tag that just points without consideration. The <tt>html_options</tt> works jointly for the image and ahref tag by
    letting the following special values enter the options on the image and the rest goes to the ahref:
    
    ::alt: If no alt text is given, the file name part of the +src+ is used (capitalized and without the extension)
    ::size: Supplied as "XxY", so "30x45" becomes width="30" and height="45"
    ::align: Sets the alignment, no special features
    
    The +src+ can be supplied as a... 
    * full path, like "/my_images/image.gif"
    * file name, like "rss.gif", that gets expanded to "/images/rss.gif"
    * file name without extension, like "logo", that gets expanded to "/images/logo.png"

* Fixed to_input_field_tag so it no longer explicitly uses InstanceTag.value if value was specified in the options hash [evl]

* Added the possibility of having validate be protected for assert_(in)valid_column #263 [Tobias Luetke]

* Added that ActiveRecordHelper#form now calls url_for on the :action option.

* Added all the HTTP methods as alternatives to the generic "process" for functional testing #276 [Tobias Luetke]. Examples:

    # Calls Controller#miletone with a GET request
    process :milestone
    
    # Calls Controller#miletone with a POST request that has parameters
    post :milestone, { "name" => "David" }
    